test/expect/cmd.castxml-and-objc2.stderr.txt
^error: '--castxml-output=<v>' does not work with Objective C$
